welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:4: error: not found: value A
  case A  => avance();
       ^BDR2:5: error: not found: value B
  case B  => avance(); avance();
       ^BDR2:6: error: not found: value C
  case C  => avance(); avance(); avance();
       ^BDR2:7: error: not found: value D
  case D  => avance(); avance(); avance(); avance();
       ^BDR2:8: error: not found: value E
  case E  => avance(); avance(); avance(); avance(); avance();
       ^BDR2:9: error: not found: value F
  case F  => avance(); avance(); avance(); avance(); avance(); avance();
       ^BDR2:10: error: not found: value U
  case U  => recule(); recule(); recule(); recule(); recule(); recule();
       ^BDR2:11: error: not found: value V
  case V  => recule(); recule(); recule(); recule(); recule();
       ^BDR2:12: error: not found: value W
  case W  => recule(); recule(); recule(); recule();
       ^BDR2:13: error: not found: value X
  case X  => recule(); recule(); recule();
       ^BDR2:14: error: not found: value Y
  case Y  => recule(); recule();
       ^BDR2:15: error: not found: value Z
  case Z  => recule();
       ^BDR2:16: error: not found: value R
  case R  => droite(); avance();
       ^BDR2:17: error: not found: value L
  case L  => gauche(); avance();
       ^BDR2:18: error: not found: value I
  case I  => droite(); droite(); avance();
       ^